Fix minor layout bug on small horizontal devices

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -5,6 +5,11 @@
     text-align: center;
     font-size: 32px;
     height: 100%;
+    flex: 1;
+}
+
+.about-info {
+    padding-bottom: 40px;
 }
 
 @media (max-width: 400px) {
